--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </div>
 </section>
 
-<section class="map1 cid-sjsIM4Nj6n" id="map1-l">
+<section class="map1 cid-sjsIM4Nj6n" id="mapa/index.html">
     
     
     <div class="container">
