--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-1"><strong>Onde estão as espécies?</strong></h3>
             
         </div>
-        <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=350 5th Ave, New York, NY 10118" allowfullscreen=""></iframe></div>
+        <div class="mapa/mapa.html"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=350 5th Ave, New York, NY 10118" allowfullscreen=""></iframe></div>
     </div>
 </section>
 
